@@ -1,3 +1,8 @@
+     - adapt to new labanquepostale.fr architecture
+       (`clavier_statique.html' is no more available.
+        relying on md5sums of button images to recognize them 
+	to be able to compute the mangled password)
+
 6.00 Fri Jun 26 19:16:37 CEST 2009
      - adapt to new labanquepostale.fr architecture
        (including "cartes à débit différé")
